--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.2.3",
+        "@reduxjs/toolkit": "^1.7.0",
         "next": "12.0.7",
+        "next-redux-wrapper": "^7.0.5",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "redux-devtools-extension": "^2.13.9",
         "sass": "^1.44.0"
     },
     "devDependencies": {
