--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "dependencies": {
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
         "@mui/material": "^5.2.3",
         "@reduxjs/toolkit": "^1.7.0",
+        "@unicef/material-ui-currency-textfield": "^0.8.6",
         "next": "12.0.7",
         "next-redux-wrapper": "^7.0.5",
+        "numeral": "^2.0.6",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-redux": "^7.2.6",
