--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/cache": "^11.6.0",
         "@emotion/react": "^11.7.0",
+        "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.6.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/styles": "^4.11.4",
         "@mui/material": "^5.2.3",
         "@reduxjs/toolkit": "^1.7.0",
         "@unicef/material-ui-currency-textfield": "^0.8.6",
+        "create-emotion-server": "^11.0.0",
         "next": "12.0.7",
         "next-redux-wrapper": "^7.0.5",
         "numeral": "^2.0.6",
