--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "devDependencies": {
         "@types/node": "16.11.12",
+        "@types/numeral": "^2.0.2",
         "@types/react": "17.0.37",
         "eslint": "8.2.0",
         "eslint-config-airbnb": "19.0.2",
