--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@reduxjs/toolkit": "^1.7.0",
         "@unicef/material-ui-currency-textfield": "^0.8.6",
         "create-emotion-server": "^11.0.0",
+        "highcharts": "^9.3.2",
+        "highcharts-react-official": "^3.1.0",
         "next": "12.0.7",
         "next-redux-wrapper": "^7.0.5",
         "numeral": "^2.0.6",
