--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "17.0.2",
         "react-redux": "^7.2.6",
         "react-responsive": "^9.0.0-beta.5",
+        "react-scroll": "^1.8.4",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
         "sass": "^1.44.0"
