--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/material": "^5.2.8",
         "@reduxjs/toolkit": "^1.7.0",
         "@unicef/material-ui-currency-textfield": "^0.8.6",
+        "chart.js": "^3.7.1",
         "create-emotion-server": "^11.0.0",
         "highcharts": "^9.3.2",
         "highcharts-react-official": "^3.1.0",
@@ -25,6 +26,7 @@
         "next-redux-wrapper": "^7.0.5",
         "numeral": "^2.0.6",
         "react": "17.0.2",
+        "react-chartjs-2": "^4.0.1",
         "react-dom": "17.0.2",
         "react-redux": "^7.2.6",
         "react-responsive": "^9.0.0-beta.5",
